; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_frame-base.c_default_frame_args_address.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_frame-base.c_default_frame_args_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.frame_info = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.frame_info*, i8**)* @default_frame_args_address to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @default_frame_args_address(%struct.frame_info* %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.frame_info*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca %struct.frame_info*, align 8
  store %struct.frame_info* %0, %struct.frame_info** %4, align 8
  store i8** %1, i8*** %5, align 8
  %7 = call i64 (...) @DEPRECATED_FRAME_ARGS_ADDRESS_P()
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load %struct.frame_info*, %struct.frame_info** %4, align 8
  %11 = call %struct.frame_info* @get_prev_frame(%struct.frame_info* %10)
  store %struct.frame_info* %11, %struct.frame_info** %6, align 8
  %12 = load %struct.frame_info*, %struct.frame_info** %6, align 8
  %13 = call i32 @DEPRECATED_FRAME_ARGS_ADDRESS(%struct.frame_info* %12)
  store i32 %13, i32* %3, align 4
  br label %18

14:                                               ; preds = %2
  %15 = load %struct.frame_info*, %struct.frame_info** %4, align 8
  %16 = load i8**, i8*** %5, align 8
  %17 = call i32 @default_frame_base_address(%struct.frame_info* %15, i8** %16)
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %14, %9
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i64 @DEPRECATED_FRAME_ARGS_ADDRESS_P(...) #1

declare dso_local %struct.frame_info* @get_prev_frame(%struct.frame_info*) #1

declare dso_local i32 @DEPRECATED_FRAME_ARGS_ADDRESS(%struct.frame_info*) #1

declare dso_local i32 @default_frame_base_address(%struct.frame_info*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
